# TraceAnalyzer

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEV_SETUP.md  README.md  UNI_AGENT_MIGRATION.md  pyproject.toml
config/: bad_instances.json  startup_fixups.json  third_party_batch.example.yaml  third_party_eval.deepseek.example.yaml
config/audits/: r2e_removed75_pairdiag_audit_20260609.json  r2e_removed75_pairdiag_gate_20260608.jsonl
env/: __init__.py  agent_config_arl.yaml  agent_config_nexus.yaml  agent_loop.py  deployment.py  images.py  runtime.py  smoke.py
memory/: ISSUES.md  MEMORY.md
p2a/: __init__.py  api_providers.py  bonus_map_scope.py  core.py  dashboard.py  dashboard_adapter.py  dashboard_server.py  datasets.py  eval_cache.py  eval_dashboard.py  eval_fault_localization.py  filter_bonus_map_instances.py  hf_assets.py  internal_api_adapter.py  internal_api_native.py  main.py  reward_specs.py  rollouter.py  runtime_env.py  skip_cases.py  test_setup.py  third_party_batch.py  third_party_eval.py  trace.py  train_p2a.sh  trainer.py  validation_metrics.py
p2a/dashboard_static/: app.js  index.html  styles.css
p2a/precompute/: _path_compat.py  analyze_f1_decorator_prevalence.py  analyze_f5_unobserved_gt.py  analyze_localization.py  analyze_traceability.py  debug_instance.py  export_golden_patches.py  generate_bonus_map_report.py  precompute_bonus_maps.py  probe_vefaas_case.py  sample_trajectories.py  summarize_bonus_maps.py  uni_agent_sandbox.py
scripts/: build_data.py  check_deps_cpu.sh  check_uni_agent_runtime.py  lib.sh  load_local_env.sh  main.sh  main_3rd.sh  p2a_dashboard.py  precompute_eval_bonus_maps.sh  ray_setup.sh  relabel_bonus_map_node_roles.py  run_baseline_clean.sh  setup.sh  setup_uni_agent_cu128_runtime.sh  shared_hf.sh  stage_local_runtime.sh  swebench_pro_images.py  third_party_eval.sh  train_p2a.sh  uni_agent_arl.sh  uni_agent_baseline.sh  watch_third_party_batch.py
tests/: __init__.py  test_arl_adapter.py  test_bonus_map_scope.py  test_core_reads.py  test_dashboard_frontend.py  test_eval_cache_dashboard.py  test_internal_api_adapter.py  test_internal_api_native.py  test_precompute_retryable_failures.py  test_swebench_pro.py  test_swebench_pro_images.py  test_third_party_batch.py  test_third_party_eval.py  test_trace_graph.py  test_trainer_credit.py  test_validation_metrics.py
