[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2a-arl"
version = "0.1.0"
description = "P2A on uni-agent with an ARL-native sandbox backend (env/) + bonus-map process supervision (p2a/)."
requires-python = ">=3.11"

# ── core: ARL sandbox runtime + data build + bonus-map precompute ──────────────
# Everything to run scripts/build_data.py and p2a/precompute on a CPU box.
# Deliberately NO torch / ray / hydra: the data + tracing pipeline never imports them
# (they appear only in p2a/main.py + p2a/trainer.py → the training framework = [train]).
# These are plain PyPI deps PLUS the uni-agent submodule (declares no deps of its own).
dependencies = [
    # ARL sandbox backend (env/: a swe-rex AbstractRuntime backed by the arl-env SDK)
    "arl-env==0.3.1",
    "swe-rex>=1.4.0",
    "websockets",
    "loguru",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
    "httpx",
    # data build (scripts/build_data.py) + HuggingFace sourcing (latest stack is fine here:
    # datasets 5.x / pandas 3.x / numpy 2.x). The numpy<2 / pyarrow>=19 constraints that the
    # training framework needs come from verl (the [train] extra), not from here.
    "datasets",
    "huggingface-hub",
    "pandas",
    "pyarrow",
    "numpy",
    "pyyaml",
    "tqdm",
    "r2e-gym",         # Git source below; metadata override keeps it no-deps
    "uni-agent",        # local submodule (editable, see [tool.uv.sources]); has zero deps
]

[project.optional-dependencies]
# ── train: the framework, sourced from verl ITSELF (uni-agent/verl/setup.py) ───
# We do NOT hand-copy or pin the framework deps: listing `verl` (editable) pulls verl's own
# install_requires — accelerate / transformers / ray[default]>=2.41 / tensordict / peft /
# numpy<2 / pandas / pyarrow>=19 / wandb / tensorboard / …. CPU-installable (torch resolves
# to the CPU wheel), so the trainer imports + smoke-tests run without a GPU.
train = ["verl"]

# ── gpu: the GPU accelerators, ALSO sourced from verl's OWN extras ─────────────
# verl/setup.py defines these as extras_require, so we just turn them on (no pins of ours):
#   vllm  → vllm>=0.8.5,<=0.12.0      gpu  → liger-kernel, flash-attn
#   geo   → torchvision, qwen_vl_utils, mathruler
#   mcore → mbridge (Megatron bridge; p2a/train_p2a.sh uses the Megatron PPO backend)
#   math  → math-verify
# CUDA-only — install on the GPU training node:  uv pip install -e '.[train,gpu]'
gpu = ["verl[vllm,gpu,geo,mcore,math]"]

dev = ["pytest", "ruff", "mypy"]

# ── uv resolver metadata overrides ────────────────────────────────────────────
# R2E-Gym is a git package with a broad runtime/training dependency list and a stale
# datasets==2.19 pin. This project only imports its lightweight data/parsing modules
# (`ParsedCommit`, execution-log parsing), while core already declares the needed
# runtime deps. Mirror the old `uv pip install --no-deps ...` behavior in uv's
# project resolver so `uv run` / `uv sync` install r2e-gym without inheriting that
# upstream dependency graph.
[tool.uv]
dependency-metadata = [
    { name = "r2e-gym", version = "0.1.0", requires-python = ">=3.10", requires-dist = [] },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

# ── sources: the two submodules are installed editable from the local tree ─────
# Honored by uv project commands (`uv lock` / `uv sync` / `uv run`), so `[train]` pulls
# verl's real dependency graph straight from uni-agent/verl/setup.py (no drift, no copy).
[tool.uv.sources]
uni-agent = { path = "uni-agent", editable = true }
verl = { path = "uni-agent/verl", editable = true }
r2e-gym = { git = "https://github.com/R2E-Gym/R2E-Gym.git", rev = "0d94c4eb9431cd195c55a7ea3abd54006c9a1735" }

# ── deps-only project: we ship no modules; p2a/ env/ scripts/ stay on PYTHONPATH ─
[tool.setuptools]
packages = []

# ──────────────────────────────────────────────────────────────────────────────
# Full recipes:
#   CPU (data + precompute):   bash scripts/check_deps_cpu.sh          # core + r2e-gym
#   CPU (+ framework, smoke):  bash scripts/check_deps_cpu.sh --train  # + verl (CPU torch)
#   GPU server (training):     uv sync --extra train --extra gpu
# ──────────────────────────────────────────────────────────────────────────────
