[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2a-arl"
version = "0.1.0"
description = "P2A on uni-agent with an ARL-native sandbox backend (env/) + bonus-map process supervision (p2a/)."
requires-python = ">=3.11,<3.12"

# ── core: ARL sandbox runtime + data build + bonus-map precompute ──────────────
# Everything to run scripts/build_data.py and p2a/precompute on a CPU box.
# Deliberately NO torch / ray / hydra: the data + tracing pipeline never imports them
# (they appear only in p2a/main.py + p2a/trainer.py → the training framework = [train]).
# These are plain PyPI deps PLUS the uni-agent submodule (declares no deps of its own).
dependencies = [
    # ARL sandbox backend (env/: a swe-rex AbstractRuntime backed by the arl-env SDK)
    "arl-env==0.4.1",
    "swe-rex>=1.4.0",
    "websockets",
    "loguru",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
    "httpx",
    "openai",
    "swebench",
    "orjson",
    "regex",
    # data build (scripts/build_data.py) + HuggingFace sourcing (latest stack is fine here:
    # datasets 5.x / pandas 3.x / numpy 2.x). The numpy<2 / pyarrow>=19 constraints that the
    # training framework needs come from verl (the [train] extra), not from here.
    "datasets",
    "huggingface-hub",
    "pandas",
    "pyarrow",
    "numpy",
    "pyyaml",
    "tqdm",
    "wheel",
    "r2e-gym",         # Git source below; metadata override keeps it no-deps
    "uni-agent",        # local submodule (editable, see [tool.uv.sources]); has zero deps
]

[project.optional-dependencies]
# ── train: local editable verl framework ──────────────────────────────────────
# The dependency metadata below mirrors uni-agent/verl's setup requirements so
# Ray job startup can resolve from the lock without fetching editable build
# metadata from PyPI. The locked Linux training target uses CUDA 13.0 torch
# wheels, which install on CPU hosts but are large.
train = ["verl"]

# ── gpu: training accelerators ────────────────────────────────────────────────
# Keep verl's GPU/Megatron/math extras. Pin vLLM to a torch-2.9-compatible
# manylinux1 wheel; torch itself is sourced from the CUDA 13 PyTorch index below.
gpu = [
    "verl[gpu,geo,mcore,math]",
    "megatron-core>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "vllm==0.11.2",
    "cupy-cuda13x==13.6.0",
]

dev = ["pytest", "ruff", "mypy"]

# ── uv resolver metadata ──────────────────────────────────────────────────────
# R2E-Gym is a git package with a broad runtime/training dependency list and a stale
# datasets==2.19 pin. This project only imports its lightweight data/parsing modules
# (`ParsedCommit`, execution-log parsing), while core already declares the needed
# runtime deps, so the resolver should not inherit its upstream dependency graph.
#
# uni-agent and verl are local editable sources. Their metadata is declared here
# so `uv run` / `uv sync` do not need network access just to inspect editable
# package build requirements while building the shared .venv.
[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64' and platform_python_implementation == 'CPython' and python_full_version >= '3.11' and python_full_version < '3.12'",
]
exclude-dependencies = [
    "cupy-cuda12x",
]

[[tool.uv.dependency-metadata]]
name = "r2e-gym"
version = "0.1.0"
requires-python = ">=3.10"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "uni-agent"
requires-python = ">=3.10"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "verl"
version = "0.8.0.dev0"
requires-dist = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "hydra-core",
    "numpy<2.0.0",
    "pandas",
    "peft",
    "pyarrow>=19.0.0",
    "pybind11",
    "pylatexenc",
    "ray[default]>=2.41.0",
    "torchdata",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "transformers",
    "wandb",
    "packaging>=20.0",
    "tensorboard",
    "pytest; extra == 'test'",
    "pre-commit; extra == 'test'",
    "py-spy; extra == 'test'",
    "pytest-asyncio; extra == 'test'",
    "pytest-rerunfailures; extra == 'test'",
    "pyext; extra == 'prime'",
    "mathruler; extra == 'geo'",
    "torchvision; extra == 'geo'",
    "qwen_vl_utils; extra == 'geo'",
    "liger-kernel; extra == 'gpu'",
    "flash-attn; extra == 'gpu'",
    "math-verify; extra == 'math'",
    "vllm>=0.8.5,<=0.12.0; extra == 'vllm'",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0; extra == 'vllm'",
    "sglang[srt,openai]==0.5.8; extra == 'sglang'",
    "torch==2.9.1; extra == 'sglang'",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0; extra == 'sglang'",
    "trl<=0.9.6; extra == 'trl'",
    "mbridge; extra == 'mcore'",
    "tensorrt-llm>=1.2.0rc6; extra == 'trtllm'",
    "TransferQueue==0.1.6; extra == 'transferqueue'",
]
provides-extra = [
    "test",
    "prime",
    "geo",
    "gpu",
    "math",
    "vllm",
    "sglang",
    "trl",
    "mcore",
    "trtllm",
    "transferqueue",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

# ── sources: local editables plus CUDA 13 torch wheels ────────────────────────
# The editable packages use the resolver metadata above; torch packages are
# pinned to PyTorch's CUDA 13 index for the GPU training environment.
[tool.uv.sources]
uni-agent = { path = "uni-agent", editable = true }
verl = { path = "uni-agent/verl", editable = true }
r2e-gym = { git = "https://github.com/R2E-Gym/R2E-Gym.git", rev = "0d94c4eb9431cd195c55a7ea3abd54006c9a1735" }
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# ── deps-only project: we ship no modules; p2a/ env/ scripts/ stay on PYTHONPATH ─
[tool.setuptools]
packages = []

# ──────────────────────────────────────────────────────────────────────────────
# Full recipes:
#   CPU (data + precompute):   bash scripts/check_deps_cpu.sh          # core + r2e-gym
#   CPU (+ framework, smoke):  bash scripts/check_deps_cpu.sh --train  # + verl, large torch wheel
#   GPU server (training):     uv sync --extra train --extra gpu
# ──────────────────────────────────────────────────────────────────────────────
